k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec: 
  type: ClusterIP
  selector:
    component: server
  ports:  
    - protocol: TCP
      port: 5000
      targetPort: 5000
