k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - app.fib.exam.ly
    - www.app.fib.exam.ly
    secretName: app.fib.exam.ly
  ingressClassName: nginx
  rules:
  - host: app.fib.exam.ly
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-service
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 5000
  - host: www.app.fib.exam.ly
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-service
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 5000
